# download-cleaner

./: .gitignore  AGENT.md  Cargo.toml  README.md  README.zh-CN.md  app.js  daemon.mjs  index.html  package.json  server.mjs  styles.css
assets/macos/: AppIcon.icns  Info.plist
launchd/: com.yy.download-cleaner.plist
scripts/: package_macos.sh
src/: config.rs  daemon.rs  file_ops.rs  gui_panel.rs  gui_panel_slint.rs  launch_agent.rs  main.rs  manager.rs  memory.rs  metadata.rs  pathing.rs  types.rs  ui.rs
