[package]
name = "download-cleaner"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "z"
panic = "abort"
strip = true

[dependencies]
anyhow = "1"
notify = "6"
plist = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
xattr = "1"
